# ai_travel

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
ai_travel/: main.py  mock_api.py  planning.py  quick_suggest.py  types.py
docs/: developer_guide.md
frontend/: index.html  package.json
frontend/src/: App.tsx  routes.tsx
frontend/src/assets/data/: staticCategories.json  staticPlans.json
frontend/src/components/: DestinationTile.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  PlanCard.tsx  QuickSuggestPage.tsx
frontend/src/contexts/: FavoritesContext.tsx
frontend/src/hooks/: useFetchPlans.ts  useLocalStorageFavorites.ts
frontend/src/pages/: detail.tsx  index.tsx
frontend/src/services/: api.ts
frontend/src/types/: types.ts
mock-server/: index.js  package.json  staticCategories.json  staticPlanDetails.json  staticPlans.json  staticSliderItems.json
tests/: test_mock_api.py  test_quick_suggest.py
