[tool.poetry]
name = "ai_travel"
version = "0.1.0"
description = "MVP travel planning application"
authors = ["AI Contributor <ai@example.com>"]
packages = [{include = "ai_travel"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
